feat: settings can now support different tabs
moved the date format regexes out of the way for now

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,14 @@
 {
+	"nav": {
+		"title": {
+			"index": "Generic settings",
+			"date-formats": "Date format settings"
+		}
+	},
 	"settings": {
 		"title": {
 			"generic-settings": "Generic settings",
+			"date-formats": "Date formating",
 			"slot-presets": "Enable presets for {slot}"
 		},
 		"label": {
