--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,8 @@
     "next": "Next",
     "start": "Start",
     "add": "Add",
-    "confirm": "Confirm my changes!"
+    "confirm": "Confirm my changes!",
+    "remove": "Remove"
   },
   "nav": {
     "title": {
@@ -27,7 +28,8 @@
       "generic-settings": "Generic settings",
       "date-formats": "Date formating",
       "slot-presets": "Enable presets for {slot}",
-      "lookForTagsForTimeline": "Look into note tags"
+      "lookForTagsForTimeline": "Look into note tags",
+      "advancedDateFormatsTokenConfiguration": "Configure the tokens"
     },
     "label": {
       "dateDisplayFormat": "Date display format",
@@ -43,7 +45,8 @@
       "markdownBlockTagsToFindSeparator": "Markdown Code Block \"Tags To Find\" Separator",
       "tryYourInputFormat": "Try your input format out",
       "useAdvancedMode": "Use advanced mode / edit regexes",
-      "lookForTagsForTimeline": "Check to include a notes tags into the values used to assign notes to a timeline"
+      "lookForTagsForTimeline": "Check to include a notes tags into the values used to assign notes to a timeline",
+      "configureSingleDateToken": "The type of the token"
     },
     "button": {
       "resetToDefault": "Reset to default"
@@ -62,10 +65,34 @@
       "metadataKeyEventTitleOverride": "The key for the title override in each notes metadata",
       "markdownBlockTagsToFindSeparator": "The character or string used to split the different tags to find in a markdown code block. The split values will be looked for in notes.",
       "tryYourInputFormat": "Just type out the date like you would in a notes metadata block. Bellow, every field should corespond to the correct token and be sorted in the correct order.",
-      "lookForTagsForTimeline": "This means if you tag you note with a string and include that string in the timeline definition this note will be included in the timeline computing"
+      "lookForTagsForTimeline": "This means if you tag you note with a string and include that string in the timeline definition this note will be included in the timeline computing",
+      "configureSingleDateToken": {
+        "STRING": "A string typed date token represents something akin to our months. tl;dr, they are written using letter and not numbers",
+        "NUMBER": "A numerical typed date token is your stardard number representing a date. Just make sure to configure it's mininal lengh. For example a minimal length set to 2 will result in the 6th day being written as \"06\""
+      }
     },
     "details": {
       "createDateToken": "Write your date system tokens ordered from top to bottom. Make sure not to leave any cluter, these token will be used to capture your date and sort them in the expeted order."
+    },
+    "warning": {
+      "title": {
+        "tokenMismatch": "You have mismatching tokens!"
+      },
+      "text": {
+        "tokenMismatchList": "The previous list contains tokens that can't be found in your date token configuration, use the button bellow to update the token list and configure it properly once synced."
+      },
+      "button": {
+        "syncTokens": "Update tokens to reflect the above configuration"
+      }
+    },
+    "placeholder": {
+      "stringTokenDctionaryEntry": "Type the desired output of the token..."
+    }
+  },
+  "dateTokens": {
+    "configure": {
+      "STRING": "String",
+      "NUMBER": "Numerical"
     }
   }
 }
