--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,6 +33,7 @@
       "lookForInlineEventsInNotes": "Look for events in note body",
       "advancedDateFormatsTokenConfiguration": "Configure the tokens",
       "applyAdditonalConditionFormatting": "Apply additonal condition based formatting",
+      "stylizeDateInline": "Inline date style",
       "accessibility": "Accessibility settings"
     },
     "label": {
@@ -53,6 +54,7 @@
       "lookForTagsForTimeline": "Check to include a notes tags into the values used to assign notes to a timeline",
       "lookForInlineEventsInNotes": "Check to ennable the inline event feature. This allows to define events for any timeline from inside a note.",
       "applyAdditonalConditionFormatting": "Toggle on to allow date tokens conditional formatting to be allowed. When set to false this feature will be skipped. This could save you a few milliseconds off every card render.",
+      "stylizeDateInline": "Turn on to align the date with the title in the timeline cards.",
       "dateFontSize": "Override the font size of the date in the timeline cards (value in pixels)",
       "titleFontSize": "Override the font size of the title in the timeline cards (value in pixels)",
       "bodyFontSize": "Override the font size of the body in the timeline cards (value in pixels)",
@@ -91,6 +93,7 @@
       "lookForTagsForTimeline": "This means if you tag you note with a string and include that string in the timeline definition this note will be included in the timeline computing",
       "lookForInlineEventsInNotes": "Check {linkText} on how to create inline events.",
       "applyAdditonalConditionFormatting": "Toggle on to allow date tokens conditional formatting to be allowed. When set to false this feature will be skipped. This could save you a few milliseconds off every card render.",
+      "stylizeDateInline": "Turn on for a more compact display in your timeline event cards. Or turn off for more space.",
       "configureSingleDateToken": {
         "STRING": "A string typed date token represents something akin to our months. tl;dr, they are written using letter and not numbers",
         "NUMBER": "A numerical typed date token is your stardard number representing a date. Just make sure to configure it's mininal lengh. For example a minimal length set to 2 will result in the 6th day being written as \"06\""
